<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/deletecoin"
        android:layout_width="766dp"
...
        android:padding="10dp"
        android:text="Remove coin from your wallet"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/deposit"
        android:layout_width="766dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deletecoin"
        android:background="#4ed400"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="Deposit coin into your bank account"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/send"
        android:layout_width="766dp"
...
