...

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">>

            <TableLayout
                android:id="@+id/table1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
...
        android:background="@android:color/transparent"
        android:onClick="readSpinner"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/deposits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rates"
        android:text="Daily Deposits Made:"
        android:textAlignment="center" />
...
